test/constrained-generics/basic/set1/error-not-visible.good
error-not-visible.chpl:25: error: 'IFC' undeclared (first use this function)
